--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,50 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  CI:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          # Username used to log against the Docker registry
+          username: ${{secrets.DOCKERHUB_USER}}
+          # Password or personal access token used to log against the Docker registry
+          password: ${{secrets.DOCKERHUB_PWD}}
+      
+      
+      - name: Construindo a imagem e enviando para o Docker Hub
+        uses: docker/build-push-action@v3.0.0
+        with:
+          file: ./src/Dockerfile
+          context: ./src
+          push: true
+          tags: | 
+            joaotixavier/kube-news:latest
+            joaotixavier/kube-news:${{github.run_number}}
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Definindo o Kube config
+        uses: Azure/k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+        
+      - name: Efetuando o deploy no ambiente de teste
+        uses: Azure/k8s-deploy@v3.1
+        with:
+          images: fabricioveronez/kube-news:${{github.run_number}}
+          manifests: |
+            k8s/deployment.yaml
+            
+      
