--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,8 +1,8 @@
-# Deployment do Postgre
+#DEPLOY POSTGRE
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgre
+  name:  postgre
 spec:
   selector:
     matchLabels:
@@ -13,17 +13,19 @@ spec:
         app: postgre
     spec:
       containers:
-        - name: postgre
-          image: postgres:14.3
-          ports:
-            - containerPort: 5432
-          env:
-          - name: POSTGRES_PASSWORD
-            value: "Kube#123"
-          - name: POSTGRES_USER
-            value: "kubenews"
-          - name: POSTGRES_DB
-            value: "kubenews"
+      - image:  postgres:14.3
+        name:  postgre
+        ports:
+          - containerPort: 5432
+        env:
+        - name: POSTGRES_PASSWORD
+          value: "Kub#123"
+        - name: POSTGRES_USER
+          value: "kubenews"
+        - name: POSTGRES_DB
+          value: "kubenews"          
+
+#DEPLOY APLICAÇÃO
 ---
 apiVersion: v1
 kind: Service
@@ -32,41 +34,39 @@ metadata:
 spec:
   selector:
     app: postgre
-  ports:
-  - port: 5432 
+  ports: 
+  - port: 5432
     targetPort: 5432
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kubenews
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: kubenews
   template:
     metadata:
       labels:
-        app: kubenews  
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "8080"
-        prometheus.io/path: "/metrics"
+        app: kubenews
     spec:
       containers:
       - name: kubenews
-        image: fabricioveronez/kube-news:v1
+        image: joaotixavier/kube-news:v2
         env:
-        - name: DB_DATABASE
-          value: "kubenews"
         - name: DB_USERNAME
           value: "kubenews"
+        - name: DB_DATABASE
+          value: "kubenews"
         - name: DB_PASSWORD
-          value: "Kube#123"
+          value: "Kub#123"
         - name: DB_HOST
-          value: "postgre"      
+          value: "postgre"              
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -78,4 +78,4 @@ spec:
   - port: 80
     targetPort: 8080
     nodePort: 30000
-  type: LoadBalancer
+  type: Loadbalancer
