--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,8 +1,8 @@
-#DEPLOY POSTGRE
+# Deployment do Postgre
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  postgre
+  name: postgre
 spec:
   selector:
     matchLabels:
@@ -13,19 +13,17 @@ spec:
         app: postgre
     spec:
       containers:
-      - image:  postgres:14.3
-        name:  postgre
-        ports:
-          - containerPort: 5432
-        env:
-        - name: POSTGRES_PASSWORD
-          value: "Kub#123"
-        - name: POSTGRES_USER
-          value: "kubenews"
-        - name: POSTGRES_DB
-          value: "kubenews"          
-
-#DEPLOY APLICAÇÃO
+        - name: postgre
+          image: postgres:14.3
+          ports:
+            - containerPort: 5432
+          env:
+          - name: POSTGRES_PASSWORD
+            value: "Kube#123"
+          - name: POSTGRES_USER
+            value: "kubenews"
+          - name: POSTGRES_DB
+            value: "kubenews"
 ---
 apiVersion: v1
 kind: Service
@@ -34,24 +32,23 @@ metadata:
 spec:
   selector:
     app: postgre
-  ports: 
-  - port: 5432
+  ports:
+  - port: 5432 
     targetPort: 5432
-
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kubenews
 spec:
-  replicas: 1
+  replicas: 20
   selector:
     matchLabels:
       app: kubenews
   template:
     metadata:
       labels:
-        app: kubenews
+        app: kubenews  
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8080"
@@ -59,18 +56,17 @@ spec:
     spec:
       containers:
       - name: kubenews
-        image: joaotixavier/kube-news:v2
+        image: fabricioveronez/kube-news:11
         env:
-        - name: DB_USERNAME
-          value: "kubenews"
         - name: DB_DATABASE
           value: "kubenews"
+        - name: DB_USERNAME
+          value: "kubenews"
         - name: DB_PASSWORD
-          value: "Kub#123"
+          value: "Kube#123"
         - name: DB_HOST
-          value: "postgre"              
+          value: "postgre"      
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
